--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "lint": "eslint --ext .tsx,.ts src/",
+    "lint:fix": "yarn lint -- --fix",
     "build": "tsc && vite build",
     "gen": "openapi-generator-cli generate -i ../swagger/openapi2.yaml -o ./src/openapi -g typescript-fetch",
     "preview": "vite preview"
@@ -24,8 +26,18 @@
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.38.1",
     "@vitejs/plugin-react": "^2.0.1",
-    "typescript": "^4.6.4",
+    "eslint": "^8.0.1",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "typescript": "*",
     "vite": "^3.0.7"
   }
 }
