--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "lint": "eslint --ext .tsx,.ts src/",
     "lint:fix": "yarn lint -- --fix",
+    "format": "prettier --write \"**/*.+(js|json|yml|ts|tsx)\"",
     "build": "tsc && vite build",
     "gen": "openapi-generator-cli generate -i ../swagger/openapi2.yaml -o ./src/openapi -g typescript-fetch",
     "preview": "vite preview"
@@ -31,12 +32,14 @@
     "@vitejs/plugin-react": "^2.0.1",
     "eslint": "^8.0.1",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^2.7.1",
     "typescript": "*",
     "vite": "^3.0.7"
   }
