--- a/frontend/.eslintrc.yml
+++ b/frontend/.eslintrc.yml
@@ -3,9 +3,11 @@ env:
   es2021: true
 extends:
   - plugin:react-hooks/recommended
+  - airbnb
   - airbnb-typescript
+  - prettier
 overrides: []
-parser: "@typescript-eslint/parser"
+parser: '@typescript-eslint/parser'
 parserOptions:
   ecmaFeatures:
     jsx: true
@@ -15,11 +17,12 @@ parserOptions:
 plugins:
   - react
   - react-hooks
-  - "@typescript-eslint"
-rules: {
-  react/react-in-jsx-scope: off,
-  react-hooks/rules-of-hooks: error,
-  react-hooks/exhaustive-deps: warn,
-  import/extensions: off,
-  import/no-extraneous-dependencies: off
-}
+  - '@typescript-eslint'
+rules:
+  {
+    react/react-in-jsx-scope: off,
+    react-hooks/rules-of-hooks: error,
+    react-hooks/exhaustive-deps: warn,
+    import/extensions: off,
+    import/no-extraneous-dependencies: off
+  }
